# SpaceInvaders

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Components/: AnimatedSprite.cpp  AnimatedSprite.h  BetterBoxCollider.cpp  BetterBoxCollider.h  Bullet.cpp  Bullet.h  Enemy.cpp  Enemy.h  EnemyAI.cpp  EnemyAI.h  EnemyController.cpp  EnemyController.h  EnemyRow.cpp  EnemyRow.h  ICollider.h  ICollisionTester.h  IComponent.h  MovableComponent.h  Physics.cpp  Physics.h  SpriteRenderer.cpp  SpriteRenderer.h
CursesWrapper/: BigTextBox.cpp  BigTextBox.h  IScreenObject.h  Rect.cpp  Rect.h  ScreenObject.cpp  ScreenObject.h  Sprite.cpp  Sprite.h  TextBox.cpp  TextBox.h  Vector2.cpp  Vector2.h
Data/: ScoreContainer.h  ShipContainer.h  SpriteContainer.cpp  SpriteContainer.h  Vector2.cpp  Vector2.h
Game/: EnemyContainer.cpp  EnemyContainer.h  GameObject.cpp  GameObject.h  ITick.cpp  ITick.h  Level.h
Managers/: AssetManager.cpp  AssetManager.h  GameClock.cpp  GameClock.h  GameManager.cpp  GameManager.h  RenderManager.cpp  RenderManager.h  SpriteManager.cpp  SpriteManager.h
Util/: Constants.h  IncludeResolver.h  Util.cpp  Util.h
